--- a/codes/mnist_lenet.ipynb
+++ b/codes/mnist_lenet.ipynb
@@ -245,7 +245,7 @@
     "        \n",
     "        batch_loss.append(loss.item())\n",
     "        batch_ll.append(log_likelihood.item()) \n",
-    "        batch_kl.append(kl.item())\n",
+    "        batch_kl.append(kl.item()/ len(trainloader.dataset))\n",
     "    avg = lambda l: sum(l)/len(l)\n",
     "    avg_loss, avg_ll, avg_kl = avg(batch_loss), avg(batch_ll), avg(batch_kl)\n",
     "    sto_acc = compute_accuracy(sto_model, testloader)\n",
