--- a/project_summary/EXAMPLE_BIB.bib
+++ b/project_summary/EXAMPLE_BIB.bib
@@ -103,3 +103,41 @@ year = {2014}
   pages={318--319},
   year={2020}
 }
+
+@article{lecun1998gradient,
+  title={Gradient-based learning applied to document recognition},
+  author={LeCun, Yann and Bottou, L{\'e}on and Bengio, Yoshua and Haffner, Patrick},
+  journal={Proceedings of the IEEE},
+  volume={86},
+  number={11},
+  pages={2278--2324},
+  year={1998},
+  publisher={Ieee}
+}
+@article{simonyan2014very,
+  title={Very deep convolutional networks for large-scale image recognition},
+  author={Simonyan, Karen and Zisserman, Andrew},
+  journal={arXiv preprint arXiv:1409.1556},
+  year={2014}
+}
+
+@article{krizhevsky2009CIFAR,
+  title={Learning multiple layers of features from tiny images},
+  author={Krizhevsky, Alex and Hinton, Geoffrey and others},
+  year={2009},
+  publisher={Citeseer}
+}
+
+@article{xiao2017fashion,
+  title={Fashion-mnist: a novel image dataset for benchmarking machine learning algorithms},
+  author={Xiao, Han and Rasul, Kashif and Vollgraf, Roland},
+  journal={arXiv preprint arXiv:1708.07747},
+  year={2017}
+}
+
+@misc{sehwanjoo2020vggcifar10,
+  author       = {SeHwanJoo},
+  title        = {cifar10-vgg16},
+  howpublished = {https://github.com/SeHwanJoo/cifar10-vgg16},
+  year         = {2020}
+}
